Pintado de las interfaces Inicio y Login

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Juego de preguntas</title>
+    <title>Concurso de Preguntas</title>
   </head>
+
   <body>
     <div id="root"></div>
   </body>
